--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -12,4 +12,4 @@ jobs:
     uses: ballerina-platform/ballerina-standard-library/.github/workflows/trivy-scan-template.yml@main
     secrets: inherit
     with:
-      additional-build-flags: "-x :googleapis.calendar-examples:build"
+      additional-build-flags: "-x :googleapis.calendar-examples:build -Pgroups=mock"
