--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 distribution = "2201.8.0"
 org = "ballerinax"
-name = "googleapis.calendar"
+name = "googleapis.gcalendar"
 version = "4.0.0"
 license = ["Apache-2.0"]
 authors = ["Ballerina"]
