--- a/.github/workflows/dev-stg-release.yml
+++ b/.github/workflows/dev-stg-release.yml
@@ -19,4 +19,4 @@ jobs:
     secrets: inherit
     with:
       environment: ${{ github.event.inputs.environment }}
-      additional-publish-flags: "-x :googleapis.gcalendar-examples:build -Pgroups=mock"
+      additional-publish-flags: "-x :googleapis.gcalendar-examples:build"
