--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,3 +14,6 @@ jobs:
     with:
       package-name: googleapis.gcalendar
       package-org: ballerinax
+      additional-build-flags: "-x :googleapis.gcalendar-examples:build"
+      additional-release-flags: "-x :googleapis.gcalendar-examples:build"
+      additional-publish-flags: "-x :googleapis.gcalendar-examples:build"
