Add dependency to generate pom file for maven publication

--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -95,5 +95,6 @@ clean {
     delete 'build'
 }
 
+build.dependsOn "generatePomFileForMavenPublication"
 publishToMavenLocal.dependsOn build
 publish.dependsOn build
